--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
             <button class="hero-button">Sign Up</button>
         </div>
-        <img class="hero-content-right">
+        <img class="hero-content-right" src="./assets/img/lucas-doddema-f6HWxHJ4lSc-unsplash.jpg">
     </div>
     <div class="info-content">
         <h2 class="info-content-header">Some random information.</h2>
@@ -56,8 +56,10 @@
         </div>
     </div>
     <div class="quote-content">
-        <p class="quote">This is an inspiring quote, or a testimonial froma customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <h5 class="quote-attr">Thor, God of Thunder</h5>
+        <div class="quote-text">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <h5 class="quote-attr">- Thor, God of Thunder</h5>
+        </div>
     </div>
     <div class="call-to-action">
         <div class="call-to-action-card">
