Remove unused divs and classes

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     </div>
     <div class="call-to-action">
         <div class="call-to-action-card">
-            <h6 class="">Call to action! It's time!</h6>
-            <p class="call-to-action-text">Sign up for our product by clicking that button right over there!</p>
+            <h5>Call to action! It's time!</h5>
+            <p>Sign up for our product by clicking that button right over there!</p>
             <button class="call-to-action-button">Sign Up</button>
         </div>
     </div>
     <div class="footer">
-        <p class="footer-text">Copyright © The Odin Project 2021</p>
+        <p>Copyright © The Odin Project 2021</p>
     </div>
 </body>
 
