--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
 <body>
     <div class="header">
-        <span class="header-logo">Header Logo</span>
-        <ul>
-            <li><a>header link one</a></li>
-            <li><a>header link two</a></li>
-            <li><a>header link three</a></li>
-        </ul>
+        <div class="header-content">
+            <span class="header-logo">Header Logo</span>
+            <ul>
+                <li><a>header link one</a></li>
+                <li><a>header link two</a></li>
+                <li><a>header link three</a></li>
+            </ul>
+        </div>
     </div>
     <div class="hero">
         <div class="hero-content-left">
@@ -63,9 +65,11 @@
     </div>
     <div class="call-to-action">
         <div class="call-to-action-card">
-            <h5>Call to action! It's time!</h5>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button class="call-to-action-button">Sign Up</button>
+            <div class="call-to-action-card-text">
+                <h5>Call to action! It's time!</h5>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign Up</button>
         </div>
     </div>
     <div class="footer">
